# weather-dagster

./: .gitignore  README.md  pyproject.toml
data/: 2023-08-21-195817_daily_forecast.csv  2023-08-26-235909_daily_forecast.csv  2023-08-27-004821_daily_forecast.csv  2023-08-27-160957_daily_forecast.csv  2023-08-27-160957_hourly_forecast.csv  2023-08-28-125704_daily_forecast.csv  2023-08-28-125704_hourly_forecast.csv
src/: __init__.py  daily_forecast.py  hourly_forecast.py  main.py
src/assets/: forecast_dag.py
src/etl_raw/: daily_forecast.py  hourly_forecast.py  main.py
src/jobs/: __init__.py
src/resources/: weather_resource.py
src/schedules/: __init__.py
src/utils/: api_conn.py
